--- a/Database.Tests/Auth/CreateSessionTests.resx
+++ b/Database.Tests/Auth/CreateSessionTests.resx
@@ -122,7 +122,7 @@
 
 DECLARE @Email VARCHAR(100) = 'test@email.com'
 
-INSERT INTO dbo.[User] (PasswordHash, PasswordSalt, Email)
+INSERT INTO [Auth].[User] (PasswordHash, PasswordSalt, Email)
 VALUES ('hash', 'salt', @Email);
 
 --DECLARE @UserId int = CONVERT(int, @@IDENTITY);
@@ -146,7 +146,7 @@ ROLLBACK TRAN;
 
 DECLARE @Email VARCHAR(100) = 'test@email.com'
 
-INSERT INTO dbo.[User] (PasswordHash, PasswordSalt, Email)
+INSERT INTO [Auth].[User] (PasswordHash, PasswordSalt, Email)
 VALUES ('hush', 'salt', @Email);
 
 DECLARE @UserId int = CONVERT(int, @@IDENTITY);
